# modulus

./: .gitignore  README.md  modulus.py  pyproject.toml
examples/: modulus.toml  orchestra.toml  schema.toml
examples/functions/: foo.py
examples/prompts/: analyst.prompt  analyzer.prompt  creator.prompt  researcher.prompt
modulus/: main.py
modulus/cli/: main.py
modulus/cli/commands/: __init__.py  apply.py  destroy.py  init.py  plan.py  run.py  show.py  verify.py
modulus/core/: parser.py  util.py
modulus/core/models/: __init__.py  agent.py  deployment.py  embedding.py  llm.py  memory.py  provider.py  task.py  tool.py  vars.py
modulus/core/resources/: agent.py  deployment.py  provider.py  task.py  tool.py
modulus/core/resources/embedding/: __init__.py  embedding_model.py  openai_embedding.py
modulus/core/resources/llm/: __init__.py  anthropic_llm.py  llm.py  openai_llm.py
modulus/core/resources/memory/: local.py  memory.py
modulus/core/resources/provider/: __init__.py  anthropic_provider.py  openai_provider.py  provider.py
modulus/core/resources/runtime/: __init__.py
modulus/core/resources/runtimes/: fastapi_runtime.py
