[project]
name = "modulus"
version = "0.1.0"
description = ""
authors = [
    {name = "Micky Abir",email = "micky.abir@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "tomlkit (>=0.13.3,<0.14.0)",
    "typer (>=0.16.0,<0.17.0)",
    "langchain[openai] (>=0.3.26,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
modulus = "modulus:main"
